# graph-analytics

./: .gitignore  CMakeLists.txt  README.md  TASK.md
docs/: report.md
scripts/: fetch_datasets.sh  validate.py
src/: common.h  csv_reader.cpp  csv_reader.h  graph_store.cpp  graph_store.h  leaderrank.cpp  leaderrank.h  main.cpp  parallel.h  preprocess.cpp  preprocess.h
